# k0fiscan

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  gen_services.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
data/: nmap-services
docs/: install.sh
src/: lib.rs  main.rs  ports.rs  scanner.rs  services.rs
